- Now checking the return value of scripts called from backup_script
- Conditionalized the backup_interval() and rotate_interval() subroutines to
  only delete the oldest interval if we're keeping more than one of that
  interval
- Reformatted source code so it doesn't wrap (at 126 columns, or 1024x768)
- Shortened output when invoked with no args or from help to fix in 80 columns

VERSION 1.0.9 (Jan 6 19:17 2004)
------------------------------------------------------------------------------
- Added backup_mysql.sh example script in utils/ to backup a MySQL database
- Added backup_smb_share.sh example script in utils/ to backup an SMB share
- Changed verbose settings internally to use numbers, instead of several
  arbitrary variables.
- Added optional "verbose" field to the config file, with values 1-5
- Fixed lockfile code to not run in test mode

VERSION 1.0.8 (Dec 26 12:56 2003)
------------------------------------------------------------------------------
- Added backup_script option to have rsnapshot invoke backup scripts directly
- Added two example backup scripts in the utils/ directory, one for Postgres,
  and one for downloading the CVS root for rsnapshot
- Added optional syslog support using the "logger" command
- Fixed ssh_args local override for individual backup points
- Added additional comments to various sections of the code
- Removed redundant rsync arguments from the default
- Moved add_lockfile() call so it runs later in the program

VERSION 1.0.7 (Dec 19 19:22 2003)
------------------------------------------------------------------------------
- Added ssh_args parameter to pass arbitrary args to ssh
- Fully integrated Autoconf build support for the program and config file
- Provided more helpful error messages when the config file is not found
- Fixed false "Can not remove lockfile" error when cmd_ssh is not defined
  but is referenced later in backup points

VERSION 1.0.6 (Nov 26 21:03 2003)