@@ -14,6 +14,8 @@ VERSION 1.0.10 (Jan ? ??:?? 2004)
   interval
 - Reformatted source code so it doesn't wrap (at 126 columns, or 1024x768)
 - Shortened output when invoked with no args or from help to fix in 80 columns
+- Changed rotate_interval() subroutine to simply move directories from lower
+  intervals up instead of recursively copying hard links
 
 VERSION 1.0.9 (Jan 6 19:17 2004)
 ------------------------------------------------------------------------------
